examples/test/testpolicy17941.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17941
  namespace: namespace61
spec:
  podSelector:
    matchLabels:
      key9: value12
      key23: value9
      key38: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value8
          key36: value24
      podSelector:
        matchLabels:
          key17: value3
          key47: value14
